# lab2

./: .gitignore  CMakeLists.txt  Makefile  calculator.cpp  calculator.h  main.cpp
